owncloud: Fix 'documents' leak in ::build_object()

Similarly to the calendar, contacts, files objects, 'documents' needs to
be unref'ed when no longer needed.

https://bugzilla.gnome.org/show_bug.cgi?id=752939